Fix issue where duplicate entries could be written
Currently `NoStream` will be returned on exhausting the hash collision
read limit when attempting to search for the stream in question.
If `NoStream` is returned, it could cause duplicate entries to be written.

Instead of returning `NoStream`, it will now return
`EventNumber.Invalid` which is a little more accurate than `NoStream`

The IndexReader for ReadStreamEventsForward and
ReadStreamEventsBackward will now return `NoStream` which will result in the
status for clients being `StreamNotFound` upon getting
`EventNumber.Invalid` back for the last event number for a stream.

The IndexReader for ReadEvent will now return `NoStream` upon getting
`EventNumber.Invalid` back for the last event number for a stream.

IndexWriter will now throw a `WrongExpectedVersion` on attempting to
write to a stream where `EventNumber.Invalid` was returned for the last
event number for a stream.

Add index bitness version to vnode settings as well as to the
VNodeBuilder so that it can be set on the MiniNode for tests.

Handle duplicate events and retain the older events scavenging and handle duplicates while reading

--- a/src/EventStore.Core.Tests/EventStore.Core.Tests.csproj
+++ b/src/EventStore.Core.Tests/EventStore.Core.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -611,6 +611,12 @@
     <Compile Include="mono_filestream_bug.cs" />
     <Compile Include="ClientAPI\connecting_with_connection_string.cs" />
     <Compile Include="Common\VNodeBuilderTests\when_building\with_secure_tcp.cs" />
+    <Compile Include="Services\Storage\HashCollisions\with_hash_collisions.cs" />
+    <Compile Include="ClientAPI\append_to_stream_with_hash_collision.cs" />
+    <Compile Include="ClientAPI\read_event_with_hash_collision.cs" />
+    <Compile Include="ClientAPI\read_stream_events_backward_with_hash_collision.cs" />
+    <Compile Include="ClientAPI\read_stream_events_forward_with_hash_collision.cs" />
+    <Compile Include="Services\Storage\Scavenge\when_deleting_duplicate_events.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventStore.ClientAPI.Embedded\EventStore.ClientAPI.Embedded.csproj">
